# learn_CVEs_with_Rust

./: README.md
extract_and_load_cve_from_nvd_api_to_postgres/: Cargo.toml
extract_and_load_cve_from_nvd_api_to_postgres/src/: main.rs
extract_and_load_cve_from_nvd_api_to_sqlite/: .env.sample  .gitignore  Cargo.toml
extract_and_load_cve_from_nvd_api_to_sqlite/src/: main.rs
extract_data_from_sample_nvd_response/: Cargo.toml  README.md
extract_data_from_sample_nvd_response/src/: main.rs
extract_then_insert_cve_from_sample_nvd_response_into_sqlite/: Cargo.toml  cve_data.sqlite
extract_then_insert_cve_from_sample_nvd_response_into_sqlite/.sqlx/: query-5509a6bd2dddcd6c813c7c98d196a2a7ceeba6bcc70ebf6c35efe6d1427c20d4.json  query-a71104a8ed716bbb0fae185ebfc6d14b34f2bb6ae0a9b5838685d8cfb33cca38.json  query-abdaa9118ac2d51a0bd1b0bc56685d0ac6b867725e8475aadb901bdb0c8e1d13.json
extract_then_insert_cve_from_sample_nvd_response_into_sqlite/src/: main.rs
